--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 aioredis==1.3.1
 asgiref==3.5.2
+async-generator==1.10
 async-timeout==4.0.2
 attrs==22.1.0
 autobahn==22.7.1
 Automat==20.2.0
+certifi==2022.6.15
 cffi==1.15.1
 channels==3.0.5
 channels-redis==3.4.1
@@ -14,11 +16,13 @@ Deprecated==1.2.13
 Django==4.1
 django-decouple==2.1
 django-redis==5.2.0
+h11==0.13.0
 hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
 msgpack==1.0.4
+outcome==1.2.0
 packaging==21.3
 psycopg2==2.9.3
 pyasn1==0.4.8
@@ -26,12 +30,20 @@ pyasn1-modules==0.2.8
 pycparser==2.21
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
+PySocks==1.7.1
 redis==4.3.4
+selenium==4.4.3
 service-identity==21.1.0
 six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
 sqlparse==0.4.2
+trio==0.21.0
+trio-websocket==0.9.2
 Twisted==22.4.0
 txaio==22.2.1
 typing_extensions==4.3.0
+urllib3==1.26.12
 wrapt==1.14.1
+wsproto==1.2.0
 zope.interface==5.4.0
